# Task-Manager

./: CMakeLists.txt  README.md  category_dialog.cpp  category_dialog.h  category_list_dialog.cpp  category_list_dialog.h  category_manager.cpp  category_manager.h  login_dialog.cpp  login_dialog.h  main.cpp  profile_dialog.cpp  profile_dialog.h  register_dialog.cpp  register_dialog.h  user_manager.cpp  user_manager.h
wxsqlite3/: wxsqlite.cpp  wxsqlite3.cpp  wxsqlite3.h
